--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ h1, h2, h3, h4, h5, h6, figure {
 @media screen and (max-width: 768px) {
   #fh5co-header .display-tc h1,
   .fh5co-cover .display-tc h1 {
-    font-size: 24px;
+    font-size: 20px;
   }
   #fh5co-header .display-tc h1 span:before,
   .fh5co-cover .display-tc h1 span:before {
@@ -219,6 +219,11 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-header .display-tc .fh5co-social-icons li a i,
 .fh5co-cover .display-tc .fh5co-social-icons li a i {
   font-size: 30px;
+}
+
+#fh5co-header .header-main {
+  display: flex;
+  justify-content: center;
 }
 
 #fh5co-features {
@@ -408,6 +413,12 @@ h1, h2, h3, h4, h5, h6, figure {
 .fh5co-heading {
   margin-bottom: 5em;
 }
+@media screen and (max-width: 768px) {
+  .fh5co-heading {
+  margin-bottom: 1em;
+}
+}
+
 .fh5co-heading.fh5co-heading-sm {
   margin-bottom: 2em;
 }
